--- a/AUTHORS
+++ b/AUTHORS
@@ -3,13 +3,18 @@ Bash One-Liners was originally created in August, 2011 in Paris, France.
 The PRIMARY AUTHORS are (and/or have been):
 
     * Janos Gyerik <info@bashoneliners.com>
+
+Other contributors:
+
+    * Pierre-Jean Baraud
     * Noah Spahn
 
 And here is an inevitably incomplete list of MUCH-APPRECIATED CONTRIBUTORS --
 people who have submitted patches, reported bugs, added translations, helped
 answer newbie questions, and generally made bashoneliners that much better:
 
-    ...
+    * Ivan Zimine
+    * Mal Page
 
 A big THANK YOU goes to:
 
