--- a/todo.txt
+++ b/todo.txt
@@ -47,6 +47,7 @@ code cleansing
 - replace bashoneliners.com references using Sites
 - see newproj.views._response
 - remove initial=initial in oneliner_edit (and others)
+- add backup.sh and crontab.sh
 
 
 future releases
