--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 release notes
 =============
+- Migrated from django 1.2 to django 1.3
 - Cleaned up many best practice violations
 
 
@@ -38,8 +39,17 @@ touch tmp/restart
 # test login is preserved
 
 
+next
+====
+- make use of django's logging
+- update sample settings from django's sample
+- the button on questions to post answer is gone
+- 500 error when trying to post comment
+
+
 code cleansing
 ==============
+- rename /media/ to /static/
 - move templates inside oneliners module
     - replace main/ with oneliners/ when rendering templates
 - fix settings import
@@ -47,7 +57,6 @@ code cleansing
 - replace bashoneliners.com references using Sites
 - see newproj.views._response
 - remove initial=initial in oneliner_edit (and others)
-- add backup.sh and crontab.sh
 
 
 future releases
