--- a/todo.txt
+++ b/todo.txt
@@ -3,49 +3,21 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 
 release notes
-=============
+-------------
 - Migrated from django 1.2 to django 1.3
 - Cleaned up many best practice violations
 
 
-prod migration
-==============
-cp sqlite3.db sqlite3.db.before
-
-./manage.py dumpdata --indent=4 | sed -e 's/"model": "main./"model": "oneliners./' > dump.json
-
-cp settings.py settings.py.before
-cp settings.py.prod settings.py
-
-rm sqlite3.db
-./manage.py syncdb  # answer no
-
-delete from django_admin_log;
-delete from django_comment_flags;
-delete from django_comments;
-delete from django_content_type;
-delete from django_openid_auth_association;
-delete from django_openid_auth_nonce;
-delete from django_openid_auth_useropenid;
-delete from django_session;
-delete from django_site;
-
-./manage.py loaddata dump.json
-
-cp passenger_wsgi.py.nextgen passenger_wsgi.py
-touch tmp/restart
-
-# basic test
-# test login is preserved
-
-
 next
-====
+----
+- make it work by default settings.py
+- migrate to django 1.5
 - 500 error when trying to post comment
+- voting
 
 
 code cleansing
-==============
+--------------
 - rename /media/ to /static/
 - move templates inside oneliners module
     - replace main/ with oneliners/ when rendering templates
@@ -57,7 +29,7 @@ code cleansing
 
 
 future releases
-===============
+---------------
 - upgrade openid provider, there is a deprecation warning
 - Voting
 	- vote up
