--- a/todo.txt
+++ b/todo.txt
@@ -15,10 +15,18 @@ next
 cleaning 1
 ----------
 - favicon!
-- isn't there a better way to announce news on github?
+- verify that all forms show 'other' errors too
+    - post one-liner did not show when next_url invalid
 - internal_error.html does not exist
     probably the process gets shot down... adjust the message
     donation for hosting to upgrade would be nice
+- explanation should be required on questions
+- setup automatic deployment of master
+- fix url deprecation
+- change next url behavior
+    - my oneliners after posting oneliner
+    - my question after posting question
+    - the oneliner after posting comment
 - add twitter user variable, useful in dev
 - use current site address in tweets, test in BETA
 - do not include oneliners.urls twice in top-level urls.py
