--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,10 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 next
 ----
+- bug: cannot vote in search results
+- bug: incorrect vote count in alternative one-liners
+    - http://localhost:8000/oneliners/oneliner/154/
+    - http://localhost:8000/oneliners/oneliner/2/
 - switch to using social-auth
     - make sure existing accounts remain unaffected
 - format everything with markdown
@@ -14,12 +18,7 @@ next
 
 future releases
 ---------------
-- Voting
-	- vote up
-	- vote down
-	- cancel vote
-	- see own vote on one-liner
-	- see all own votes on profile page
+- See all own votes on profile page
 - TOP 50
 - mark as favourite
 - ajax controls to change one-liner or question status from public to private
