--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 next
 ----
-- bug: cannot vote in search results
+- bug: cannot vote in search results updated by ajax
 - bug: incorrect vote count in alternative one-liners
     - http://localhost:8000/oneliners/oneliner/154/
     - http://localhost:8000/oneliners/oneliner/2/
