--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@ next
 - bug: vote counts wrong in ajax search results
 - add method oneliner.vote_up(user), ...
 - centralize the score counting (all annotate(..) magic in one place)
+- small bug: cannot delete question if explanation is blank (bad input validation)
 - switch to using social-auth
     - make sure existing accounts remain unaffected
 - format everything with markdown
