--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,10 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 next
 ----
-- bug: cannot vote in search results updated by ajax
-- add method oneliner.vote_up(user), ...
+- what is bind_question_answered for?
+- replace ugly static methods with more ergonomic ones:
+    - oneliner.vote_up(user)
+    - ...
 - centralize the score counting (all annotate(..) magic in one place)
 - small bug: cannot delete question if explanation is blank (bad input validation)
 - switch to using social-auth
