--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,13 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 next
 ----
+- strip trailing whitespace and ; from oneliners
+- change RSS in navbar to Follow, and update the feeds page
+    - mailing list
+    - twitter
+    - feature requests
+    - bug reports
+    - feeds
 - bug: 500 error on /profile/ page when not logged in
 - clean up the site logos
 - Recent questions -> pending questions
