--- a/todo.txt
+++ b/todo.txt
@@ -10,7 +10,7 @@ next
     - fix all button styles
     - fix all glyphs
     - change login / logout to not use <p> which breaks strangely on mid-size
-    - make footer full width
+    - fix footer height
     - fix input when posting comment
         - text
         - buttons
@@ -18,7 +18,7 @@ next
         - input box
         - checkboxes too tightly packed
     - fix input on edit profile page
-- remove tabs from all template files -> use PyCharm reformat
+- remove all dreamhost stuff
 - strip trailing whitespace and ; from oneliners
 - change RSS in navbar to Follow, and update the feeds page
     - mailing list
