--- a/todo.txt
+++ b/todo.txt
@@ -7,17 +7,14 @@ next
 - migrate to bs3
     - review static/css/bashoneliners.css
     - review templates/html5.html
-    - fix all button styles
-    - fix all glyphs
     - change login / logout to not use <p> which breaks strangely on mid-size
     - fix footer height
-    - fix input when posting comment
-        - text
-        - buttons
+    - fix ugly comment dropdown toggle, replace with glyphs if possible
     - fix search form http://localhost:8000/oneliners/search/?query=mvn
         - input box
         - checkboxes too tightly packed
     - fix input on edit profile page
+    - check on w3c validator
 - remove all dreamhost stuff
 - strip trailing whitespace and ; from oneliners
 - change RSS in navbar to Follow, and update the feeds page
