--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,8 @@ next
 ----
 - migrate to bs3
     - fix footer height
+        - edit profile alone is magically correct!
+    - fix pagination
     - fix ugly comment dropdown toggle, replace with glyphs if possible
     - review static/css/bashoneliners.css
     - review templates/html5.html
