--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,8 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 next
 ----
 - migrate to bs3
-    - fix pagination
     - check on w3c validator
+- sho beta link only to admins, not useful now
 - strip trailing whitespace and ; from oneliners
 - change RSS in navbar to Follow, and update the feeds page
     - mailing list
